Currently stuck as the API responsible for retrieving user registration information is not functioning correctly. This prevents the registration process from proceeding as expected. Waiting for resolution of this issue before being able to proceed.

--- a/src/app/pages/inscription/inscription.component.scss
+++ b/src/app/pages/inscription/inscription.component.scss
@@ -12,6 +12,7 @@
     border-radius: 16px;
     box-shadow: inset;
     width: 40vw;
+    min-width: 400px;
 
 }
 .logo{
